tests/paczka2/big_fuzzy/35481025.err
Error in line 1: S246 S105 74,2
Error in line 9: S246 S620 0,9
Error in line 7: 5BIsCBz9iLm S105 50,6
Error in line 12: 5BIsCBz9iLm S620 25,5
Error in line 19: vqJzIV S753 -6,7
Error in line 13: vqJzIV S753 87,9
Error in line 21: sjmH4S6204-2,9
Error in line 10: EnkjKgTwI S246 42,6
Error in line 23: EnkjKgTwI S105 17,1
Error in line 32: 3zst1k6 S246 17,8
Error in line 22: 5BIsCBz9iLm S753 48,6
Error in line 18: sjmH S620 26,8
Error in line 49: 3zst1k6 S753 55,1
Error in line 71: sjmH S753 254,6
Error in line 72: 3zst1k6 S620 0,3
Error in line 66: EnkjKgTwI S246 0,7
Error in line 79: 3zst1k6 S753 65,3
Error in line 87: vqJzIV S105 142,1
Error in line 107: EnkjKgTwI S753 45,91
Error in line 104: vqJzIV S246 32,0
Error in line 122: S246 S753 41,4
Error in line 109: EnkjKgTwI S753 108,2
Error in line 124: S246 S620 52,9
Error in line 145: FjCHkMxeB S246 8,1
Error in line 148: EnkjKgTwI S620 42,4
Error in line 170: EnkjKgTwI S246 25,6
Error in line 164: vqJzIV S246 47,8
Error in line 175: 3zst1k6 S246 G6,9
Error in line 174: 5BIsCBz9iLm S105 73,3
Error in line 177: 5BIsCBz9iLm S246 30,0
Error in line 188: sjmH S105 -2,6
Error in line 189: FjCHkMxeB S753 1,2
Error in line 187: sjmH S105 69,8
Error in line 173: vqJzIV S105 84,7
Error in line 190: FjCHkMxeB S246 70,1
Error in line 197: FjCHkMxeB S620 43,7
Error in line 205: S246 S620 75,4
Error in line 206: 3zst1k6 S246 61,9
Error in line 228: S246 S105 10,7
Error in line 239: S246 S246 85,5
Error in line 210: EnkjKgTwI S620 81,2
Error in line 240: S246 S105 78,8
Error in line 221: sjmH S620 37,3
Error in line 248: 5BIsCBz9iLm S620 -1,2
